add 'forgot password' button

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
           <br />
         </form>
         <button ng-click="setView('main')">Annuleren</button>
+        <button ng-click="forgotpassword(form)">Wachtwoord vergeten</button>
         <button ng-click="signin(form)" ng-disabled="loginForm.$invalid">
           Inloggen
         </button>
