remove style.css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="lib/bootstrap.css" />
     <link rel="stylesheet" href="lib/bootstrap-toggle.min.css" />
-    <link rel="stylesheet" href="style.css" />
+    <!-- <link rel="stylesheet" href="style.css" /> -->
     <script src="lib/angular.js"></script>
     <script src="lib/firebase.js"></script>
     <script src="lib/angularfire.js"></script>
