--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               </a>
             </div>
           </li>
-          <li ng-if="userInfo.admin" class="nav-item dropdown">
+          <li ng-if="admins[user.uid]" class="nav-item dropdown">
             <a
               class="nav-link dropdown-toggle"
               data-toggle="dropdown"
