make delete account btn-danger

--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                   type="submit"
                   form="deleteAccountForm"
                   value="Account verwijderen"
-                  class="btn btn-primary w-100 h-100"
+                  class="btn btn-danger w-100 h-100"
                   ng-click="deleteaccount(form)"
                   ng-disabled="working || deleteAccountForm.$invalid"
                 />
