--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
                     ng-model="edit_user.phone"
                   />
                 </div>
-                <div class="row form-group">
+                <div ng-if="edit_user.$id != user.uid" class="row form-group">
                   <label class="col-sm-4 col-lg-3 col-xl-2 col-form-label"
                     >Admin</label
                   >
@@ -821,6 +821,7 @@
                     type="checkbox"
                     class="col form-control"
                     ng-model="edit_user.admin"
+                    ng-init="edit_user.admin = admins[edit_user.$id]"
                   />
                 </div>
               </form>
