--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@
               <tbody>
                 <tr
                   ng-repeat="event in events | orderBy:'date'"
-                  ng-if="event.date * 1000 > now"
+                  ng-if="event.date > now"
                   ng-class="{'table-info': event.signups[user.uid]}"
                 >
-                  <td>{{event.date*1000 | date:"dd/MM/yyyy"}}</td>
+                  <td>{{event.date | date:"dd/MM/yyyy"}}</td>
                   <td><a href="{{event.link}}">{{event.name}}</a></td>
                   <td>
                     <div class="row">
