--- a/index.html
+++ b/index.html
@@ -188,7 +188,9 @@
                   ng-class="{'table-info': event.signups[user.uid]}"
                 >
                   <td>{{event.date | date:"dd/MM/yyyy"}}</td>
-                  <td><a href="{{event.link}}">{{event.name}}</a></td>
+                  <td>
+                    <a href="{{event.link}}" target="_blank">{{event.name}}</a>
+                  </td>
                   <td>
                     <div class="row">
                       <div class="col-auto pr-1">
