more helpful text for registration process

--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
               role="alert"
             >
               Volg de instructies in de bevestigings-e-mail om de
-              accountregistratie af te ronden en <b>log daarna opnieuw in</b>.
+              accountregistratie af te ronden, en <b>log daarna opnieuw in</b>,
+              om je in te kunnen schrijven voor activiteiten.
             </div>
 
             <div
