--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
   </head>
 
   <body class="text-justify">
+    <div class="alert alert-info text-center" role="alert">
+      Op deze pagina kun je je inschrijven voor de activiteiten van de
+      Transgendergroep Nijmegen. Bezoek
+      <a href="http://www.transgendernijmegen.nl/">onze website</a> voor
+      algemene informatie.
+    </div>
+
     <div class="card m-3">
       <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs" role="tablist">
@@ -193,7 +200,7 @@
               <tbody>
                 <tr
                   ng-repeat="event in events | orderBy:'date'"
-                  ng-if="event.date > now"
+                  ng-if="event.date > now && !event.invisible"
                   ng-class="{'table-info': event.signups[user.uid]}"
                 >
                   <td>{{event.date | date:"dd/MM/yyyy"}}</td>
@@ -858,6 +865,16 @@
                     ng-model="edit_event.no_registrations"
                   />
                 </div>
+                <div class="row form-group">
+                  <label class="col-sm-4 col-lg-3 col-xl-2 col-form-label"
+                    >Onzichtbaar</label
+                  >
+                  <input
+                    type="checkbox"
+                    class="col form-control"
+                    ng-model="edit_event.invisible"
+                  />
+                </div>
               </form>
             </div>
           </div>
@@ -966,6 +983,7 @@
         left: 0;
         right: 0;
         top: 0;
+        pointer-events: none;
       "
       role="alert"
       data-delay="5000"
